--- a/style.css
+++ b/style.css
@@ -43,12 +43,17 @@ img {
     /*url("../../media/examples/lizard.png");*/
 }
 #footer {
-    
+    display:    inline;
+    vertical-align: center;
     border-top: solid 2px black;
     background-color: white;
     bottom: 0;
+}
+#myID {
+    display:    inline;
+    vertical-align: center;
+    height: 100%;
 
- 
 }
 
 
@@ -68,10 +73,6 @@ img {
 
 }
 
-#myID {
-    height: 100%;
-    padding-top:  16px;
-}
 
 #input-parent{
     height:         250px;
@@ -86,13 +87,14 @@ img {
     height:         100px;
     width:          100px;
     border-radius:  100%;
+    font-size:      45px;
 
 }
 
 
 #submit {
     position:       relative; 
-    top:            50px;
+    top:           36px;
     right:           15px;
     border:         1px solid black;
     height:         50px;
